--- a/test/artifacts/sample_asciidoc.adoc
+++ b/test/artifacts/sample_asciidoc.adoc
@@ -1,32 +1,69 @@
-= How-to Guide
+= How to Use Our Amazing Product
+:title: How to Use Our Amazing Product
+:description: A sample file for testing purposes.
 
-This is an introductory paragraph.
+This guide will walk you through the process of using our amazing product effectively.
 
-Here's another paragraph to meet the minimum requirement.
+Follow along and be amazed!
 
 == Prerequisites
 
-Here's a prerequisite.
+Before you begin, make sure you have the following:
+
+* A valid license key
+* At least 4GB of RAM
+
+* foo
+* bar
+
+* x
+* y
 
 == Setup
 
-Here's how to set up.
+Follow these steps to set up our amazing product:
+
+1. Download the installer from our website.
+2. Run the installer and follow the on-screen instructions.
+3. Enter your license key when prompted.
+4. Restart your computer to complete the installation.
 
 == Usage
 
-Here's how to use it.
+To start using the product, follow these steps:
 
-[source,javascript]
+1. Open the application.
+2. Click on the "New Project" button.
+3. Choose a template from the list.
+
+[source,python]
 ----
-console.log("Hello, World!");
+import amazing_product
+
+project = amazing_product.create_project("My First Project")
+project.run()
 ----
+
+=== Advanced Features
+
+For advanced users, we offer additional features:
+
+1. Custom scripting
+2. API integration
+3. Automated workflows
 
 === Troubleshooting
 
-Here's how to troubleshoot.
+If you encounter any issues, try these steps:
+
+1. Restart the application.
+2. Check your internet connection.
+3. Verify your license key.
 
 == Next steps
 
-Here's what to do next.
+To get the most out of our amazing product, consider:
 
-And another paragraph to meet the minimum requirement.
+* Joining our community forums
+* Attending our weekly webinars
+* Exploring our extensive documentation
